--- a/components/safety-box-table.html
+++ b/components/safety-box-table.html
@@ -22,11 +22,11 @@
 </div>
 <!--popup content-->
 
-<md-content class="popup-padding width-500-px">
+<md-content class="popup-padding width-500-px padding-bottom-60px">
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container>
+        <md-table-container class="overflow-x-none">
 
             <table md-table md-row-select="options.rowSelection" ng-model="selected"
                    md-progress="promise">
@@ -50,7 +50,8 @@
                     </td>
 
                     <td md-cell ng-click="deleteSafetyBox($event, safety_box)"><img
-                            src="img/icons/delete_trash_24.png" alt="{{lang.deleteSafetyBox}}" title="{{lang.deleteSafetyBox}}"></td>
+                            src="img/icons/delete_trash_24.png" alt="{{lang.deleteSafetyBox}}"
+                            title="{{lang.deleteSafetyBox}}"></td>
                 </tr>
                 <tr md-row ng-show="safety_boxex.length === 0">
                     <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
@@ -59,16 +60,20 @@
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-            <div layout="row" layout-align="center end" class="margin-bottom-30-px">
+        <md-input-container
+                class="position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                ng-show="isAdmin">
+            <div class="width-120-px" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addSafetyBox()" alt="{{lang.addSafetyBox}}" title="{{lang.addSafetyBox}}">
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
-                             md-page="query.page"
-                             md-total="{{safety_boxes.length}}" md-on-paginate="">
+        <md-table-pagination
+                class="color-red background-white position-fixed bottom-0 margin-bottom-15-px width-100 padding-0 padding-right-24-px"
+                md-limit="query.limit" md-limit-options="query.limitOptions"
+                md-page="query.page"
+                md-total="{{safety_boxes.length}}" md-on-paginate="">
         </md-table-pagination>
     </div>
 </md-content>
