--- a/components/floor-settings.html
+++ b/components/floor-settings.html
@@ -22,10 +22,10 @@
 <!--end popup header-->
 
 <!--popup content-->
-<md-content class="popup-padding">
+<md-content class="popup-padding padding-bottom-60px">
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container class="margin-bottom-40-px">
+        <md-table-container class="overflow-x-none">
 
             <table md-table md-row-select="options.rowSelection" multiple="true" ng-model="selected"
                    md-progress="promise">
@@ -54,23 +54,28 @@
                         ng-class="{'md-placeholder': !floor.map_spacing}">{{floor.map_spacing || lang.insertSpacing}}
                     </td>
                     <td md-cell ng-if="isAdmin" ng-click="deleteRow(floor)"><img src="img/icons/delete_trash_24.png"
-                                                                 alt="{{lang.deleteFloor}}" title="{{lang.deleteFloor}}">
+                                                                                 alt="{{lang.deleteFloor}}"
+                                                                                 title="{{lang.deleteFloor}}">
                     </td>
                 </tr>
                 </tbody>
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float ng-if="isAdmin" class="md-block width-100 margin-top-bottom-25-px">
-            <div layout="row" layout-align="center end" class="margin-bottom-30-px">
+        <md-input-container
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                md-no-float ng-if="isAdmin">
+            <div class="width-120-px" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addNewRow()" alt="{{lang.addFloor}}" title="{{lang.addFloor}}">
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
-                             md-page="query.page"
-                             md-total="{{floors.length}}" md-on-paginate="getFloorsfloor()">
+        <md-table-pagination
+                class="color-red background-white position-fixed bottom-0 margin-bottom-15-px width-100 padding-0 padding-right-24-px"
+                md-limit="query.limit" md-limit-options="query.limitOptions"
+                md-page="query.page"
+                md-total="{{floors.length}}" md-on-paginate="getFloorsfloor()">
         </md-table-pagination>
     </div>
 </md-content>
