--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -28,11 +28,11 @@
 <!--end popup header-->
 
 <!--popup content-->
-<md-content class="popup-padding">
+<md-content class="popup-padding padding-bottom-60px">
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container class="margin-bottom-40-px">
+        <md-table-container class="overflow-x-none">
 
             <table md-table md-row-select="options.rowSelection" ng-model="selected"
                    md-progress="promise">
@@ -104,16 +104,18 @@
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float ng-show="isAdmin" class="md-block width-100 margin-bottom-50-px margin-top-0">
+        <md-input-container
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                md-no-float ng-show="isAdmin">
             <div ng-if="isOutdoor" layout="row" layout-align="center end">
                 <button ng-click="addNewRectRow()" class="md-button" layout="row" layout-align="center center">
                     <img src="img/icons/add_row_32.png" class="outline-none margin-right-10-px"
-                      alt="{{lang.insertTag}}" title="{{lang.insertTag}}">
+                         alt="{{lang.insertTag}}" title="{{lang.insertTag}}">
                     <span>RECTANGLE ZONE</span>
                 </button>
                 <button ng-click="addNewRoundRow()" class="md-button" layout="row" layout-align="center center">
                     <img src="img/icons/add_row_32.png" class="outline-none margin-right-10-px"
-                     alt="{{lang.insertTag}}" title="{{lang.insertTag}}">
+                         alt="{{lang.insertTag}}" title="{{lang.insertTag}}">
                     <span>ROUND ZONE</span>
                 </button>
             </div>
@@ -123,9 +125,11 @@
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed width-100 bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
-                             md-page="query.page"
-                             md-total="{{zonesTable.length}}" md-on-paginate="">
+        <md-table-pagination
+                class="color-red background-white position-fixed margin-bottom-15-px width-100 padding-0 padding-right-24-px bottom-0 width-100"
+                md-limit="query.limit" md-limit-options="query.limitOptions"
+                md-page="query.page"
+                md-total="{{zonesTable.length}}" md-on-paginate="">
         </md-table-pagination>
     </div>
 </md-content>
