--- a/components/manage-zones.html
+++ b/components/manage-zones.html
@@ -57,7 +57,7 @@
         <div ng-if="position" class="margin-bottom-40-px"></div>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 left-0 margin-bottom-50-px margin-top-0"
                 md-no-float ng-if="!position">
             <div class="width-120-px" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
