--- a/components/safety-box-table.html
+++ b/components/safety-box-table.html
@@ -61,7 +61,7 @@
         </md-table-container>
 
         <md-input-container
-                class="position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                class="position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 left-0 margin-bottom-50-px margin-top-0"
                 ng-show="isAdmin">
             <div class="width-120-px" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
