--- a/components/tag-category-table.html
+++ b/components/tag-category-table.html
@@ -65,9 +65,9 @@
         </md-table-container>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-0 left-0 margin-bottom-50-px margin-top-0"
                 ng-show="isAdmin">
-            <div class="width-120-px" layout="row" layout-align="center end">
+            <div class="width-120-px" class="width-120-px" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
                      ng-click="addTagCategory()" alt="{{lang.addTagCategory}}" title="{{lang.addTagCategory}}">
             </div>
