--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -102,7 +102,7 @@
         </md-table-container>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 margin-top-0"
                 md-no-float ng-if="isAdmin">
             <div layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
