--- a/components/users-table.html
+++ b/components/users-table.html
@@ -107,7 +107,7 @@
         </md-table-container>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100"
                 md-no-float ng-show="isAdmin || isUserManager">
             <div class="" layout="row" layout-align="center end">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
