--- a/components/zone-table.html
+++ b/components/zone-table.html
@@ -105,7 +105,7 @@
         </md-table-container>
 
         <md-input-container
-                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 width-100 margin-bottom-50-px margin-top-0"
+                class="md-block position-fixed bottom-0 margin-none margin-bottom-23-px zindex-100 margin-bottom-50-px margin-top-0"
                 md-no-float ng-show="isAdmin">
             <div ng-if="isOutdoor" layout="row" layout-align="center end">
                 <button ng-click="addNewRectRow()" class="md-button" layout="row" layout-align="center center">
